<resources>
    <string name="app_name">FirstCalcu</string>
    <string name="sinus">sin</string>
    <string name="cosinus">cos</string>
    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <string name="sept">7</string>
    <string name="quatre">4</string>
    <string name="un">1</string>
    <string name="plusoumoin">+/-</string>
    <string name="parentheses">( )</string>
    <string name="huit">8</string>
    <string name="cinq">5</string>
    <string name="deux">2</string>
    <string name="zero">0</string>
    <string name="pourcentage">%</string>
    <string name="neuf">9</string>
    <string name="six">6</string>
    <string name="trois">3</string>
    <string name="virgule">,</string>
    <string name="diviser">/</string>
    <string name="multiplier">*</string>
    <string name="soustraire">-</string>
    <string name="additionner">+</string>
    <string name="egal">=</string>
    <string name="racinecarree">√</string>
</resources>