<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    zone de texte-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:text="0"
        android:textSize="50dp"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    premiere colonne de bouton-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent" >

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/sinus"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/racinecarree"
            android:textColor="@color/green"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/sept"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/quatre"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/un"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/plusoumoin"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />
    </LinearLayout>

<!--    deuxieme colonne de bouton-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/cosinus"
            android:textColor="@color/green"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/parentheses"
            android:textColor="@color/green"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/huit"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/cinq"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/deux"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/zero"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />
    </LinearLayout>

<!--    troisieme colonne de bouton-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/clear"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/pourcentage"
            android:textColor="@color/green"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/neuf"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/six"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/trois"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/virgule"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />
    </LinearLayout>

<!--    quatrieme colonne de bouton-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/delete"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/diviser"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/multiplier"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/soustraire"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/additionner"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_button" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/egal"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            app:backgroundTint="#4CAF50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_button"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>